--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="sass/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="full-screen-container">
+        <img src="https://giffiles.alphacoders.com/209/209037.gif">
+    </div>
+
+    <h1 class="welcome-animation">Welcome...</h1>
+
 </body>
 </html>
